added text edit features

--- a/noteApp/index.html
+++ b/noteApp/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Note App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900italic' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='index.css'>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
